SFUSA/force-app/main/default/objects/CS_Plant_Setting__mdt/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <label>CS Country Setting</label>
        <referenceTo>CS_Country_Setting__mdt</referenceTo>
        <relationshipName>Plant_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </CustomField>